REGRESSION(282648@main): A tweet with 12000+ emojis takes Safari forever to display https://bugs.webkit.org/show_bug.cgi?id=285576 rdar://142638658

Reviewed by NOBODY (OOPS!).

Inserting a replaced Element (image, canvas, input, etc) should not affect the
directionality of the parent since it should be treated as a neutral character.

* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::childrenChanged):
* Source/WebCore/dom/Element.h:
(WebCore::Element::isReplaced const):
* Source/WebCore/html/HTMLAttachmentElement.h:
* Source/WebCore/html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::isReplaced const):
* Source/WebCore/html/HTMLCanvasElement.h:
* Source/WebCore/html/HTMLFrameElement.h:
* Source/WebCore/html/HTMLIFrameElement.h:
* Source/WebCore/html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::isReplaced const):
* Source/WebCore/html/HTMLImageElement.h:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isReplaced const):
* Source/WebCore/html/HTMLInputElement.h:
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/html/HTMLPlugInElement.cpp:
(WebCore::HTMLPlugInElement::isReplaced const):
* Source/WebCore/html/HTMLPlugInElement.h:
* Source/WebCore/html/HTMLVideoElement.h:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::m_intrinsicSize):
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::shouldApplyLayoutContainment):
(WebCore::shouldApplySizeContainment):
(WebCore::shouldApplyInlineSizeContainment):
(WebCore::shouldApplyPaintContainment):
* Source/WebCore/svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::isReplaced const):
* Source/WebCore/svg/SVGSVGElement.h: