Source/WebCore/rendering/RenderReplaced.cpp
@@ -77,7 +77,7 @@ RenderReplaced::RenderReplaced(Type type, Element& element, RenderStyle&& style,
     : RenderBox(type, element, WTFMove(style), { }, flags)
     , m_intrinsicSize(cDefaultWidth, cDefaultHeight)
 {
-    ASSERT(element.isReplaced(this->style()) || type == Type::Image);
+    ASSERT(element.isReplaced(&this->style()) || type == Type::Image);
     setBlockLevelReplacedOrAtomicInline(true);
     ASSERT(isRenderReplaced());
 }
@@ -86,7 +86,7 @@ RenderReplaced::RenderReplaced(Type type, Element& element, RenderStyle&& style,
     : RenderBox(type, element, WTFMove(style), { }, flags)
     , m_intrinsicSize(intrinsicSize)
 {
-    ASSERT(element.isReplaced(this->style()) || type == Type::Image);
+    ASSERT(element.isReplaced(&this->style()) || type == Type::Image);
     setBlockLevelReplacedOrAtomicInline(true);
     ASSERT(isRenderReplaced());
 }
